test/corpus/commands.txt
================================================================================
Commands
================================================================================

echo "hello"

set hi "heelo"

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (quoted_word)))
  (set
    (id)
    (quoted_word)))

================================================================================
Command substitution
================================================================================

echo [echo hello]

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (command_substitution
        (command
          (simple_word)
          (word_list
            (simple_word)))))))

================================================================================
Command with no terminator
================================================================================

baz {foo}

baz {foo
foo}

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word)))))
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word))
        (command
          (simple_word))))))

================================================================================
Command with trailing terminator
================================================================================

baz {
    aa
    ;
}

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (braced_word
        (command
          (simple_word))))))
