test/corpus/conditionals.txt
================================================================================
Conditionals
================================================================================

if $hello {
    echo hi
} elseif $hello {
    echo hi
} else {
    echo bye
}

--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (variable_substitution
        (id)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (simple_word))))
    (elseif
      (expr
        (variable_substitution
          (id)))
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))
    (else
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))))

================================================================================
Empty statement block
================================================================================

if {1} {
}

if {1} {
}

--------------------------------------------------------------------------------
(source_file
  (conditional
    (expr
      (number))
    (braced_word))
  (conditional
    (expr
      (number))
    (braced_word)))
