test/corpus/expr.txt
================================================================================
Expr 'in'
================================================================================

if {$foo in {"basic"}} {}

if {{foo} in {basic}} {}

--------------------------------------------------------------------------------

(source_file
  (if
    (expr
      (binop_expr
        (variable_substitution
          (id))
        (braced_word_simple
          (quoted_word))))
        (braced_word))
      (if
        (expr
          (binop_expr
            (braced_word_simple
              (simple_word))
            (braced_word_simple
              (simple_word))))
    (braced_word)))

================================================================================
Expr eq and &&
================================================================================

expr {$var eq "sec" && $bar}

--------------------------------------------------------------------------------

(source_file
  (expr_cmd
    (expr
      (binop_expr
        (binop_expr
          (variable_substitution
            (id))
          (quoted_word))
        (variable_substitution
          (id))))))

================================================================================
Expr without braces/quote gets an ERROR
================================================================================

expr 1 + 1

--------------------------------------------------------------------------------
; An ERROR is expected in the case of an unbraced `expr` expression.
; This verifies unbraced and unquoted expressions will not be properly parsed.
; It is generally recommended to use braces to enclose expressions to prevent double substitution.

(source_file
  (ERROR
    (expr_cmd
      (expr
        (number)))
    (number)))
