test/corpus/test.txt

================================================================================
Commands
================================================================================

echo "hello"

set hi "heelo"

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (quoted_word)))
  (set
    (simple_word)
    (quoted_word)))

================================================================================
Procedures
================================================================================

proc foo {arg1 arg2} {
    echo "hello"
    echo "word$hi \$bye word"
}

--------------------------------------------------------------------------------

(source_file
  (procedure
    (simple_word)
    (arguments
      (argument
        (simple_word))
      (argument
        (simple_word)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (quoted_word)))
      (command
        (simple_word)
        (word_list
          (quoted_word
            (variable_substitution
              (id))
            (escaped_character)))))))

================================================================================
Comments
================================================================================

# this is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Foreach
================================================================================

foreach a {1 2 3 4 5} {
    put $i
}

--------------------------------------------------------------------------------

(source_file
  (foreach
    (arguments
      (simple_word))
    (braced_word_simple
      (simple_word)
      (simple_word)
      (simple_word)
      (simple_word)
      (simple_word))
    (braced_word
      (command
        (simple_word)
        (word_list
          (variable_substitution
            (id)))))))

================================================================================
Conditionals
================================================================================

if $hello {
    echo hi
} elseif $hello {
    echo hi
} else {
    echo bye
}

--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (variable_substitution
        (id)))
    (braced_word
      (command
        (simple_word)
        (word_list
          (simple_word))))
    (elseif
      (expr
        (variable_substitution
          (id)))
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))
    (else
      (braced_word
        (command
          (simple_word)
          (word_list
            (simple_word)))))))

================================================================================
Command substitution
================================================================================

echo [echo hello]

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (command_substitution
        (command
          (simple_word)
          (word_list
            (simple_word)))))))

================================================================================
Escaped string
================================================================================

echo "word$hi \$bye word"

--------------------------------------------------------------------------------

(source_file
  (command
    (simple_word)
    (word_list
      (quoted_word
        (variable_substitution
          (id))
        (escaped_character)))))

================================================================================
Slash in string
================================================================================

set dir $build_dir/subdir

--------------------------------------------------------------------------------

(source_file
  (set
    (simple_word)
      (variable_substitution
        (id))
      (concat)
      (simple_word)))

================================================================================
Curly in string
================================================================================

set v $a{b}

--------------------------------------------------------------------------------

(source_file
  (set
    (simple_word)
      (variable_substitution
        (id))
      (concat)
      (braced_word_simple
        (simple_word))))


================================================================================
Regexp
================================================================================

regexp {\d} $var m b

--------------------------------------------------------------------------------

(source_file
  (regexp
    (braced_word_simple
        (escaped_character))
    (variable_substitution
      (id))
    (simple_word)
    (simple_word)))


================================================================================
Expr 'in'
================================================================================

if {$foo in {"basic"}} {}

if {{foo} in {basic}} {}

--------------------------------------------------------------------------------

(source_file
  (conditional
    (expr
      (binop_expr
        (variable_substitution
          (id))
        (braced_word_simple
          (quoted_word))))
        (braced_word))
      (conditional
        (expr
          (binop_expr
            (braced_word_simple
              (simple_word))
            (braced_word_simple
              (simple_word))))
    (braced_word)))
